force-app/main/default/objects/Healthcare_Provider__c/Healthcare_Provider__c.object-meta.xml
<CustomObject>
    <label>Healthcare Provider</label>
    <nameField>
        <displayFormat>PROVIDERID{00000}</displayFormat>
        <label>Healthcare Provider Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Healthcare Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>