force-app/main/default/objects/Healthcare_Provider__c/fields/HCP_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>HCP_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP Enrollment</label>
    <referenceTo>HCP_Enrollment__c</referenceTo>
    <relationshipLabel>Healthcare Providers</relationshipLabel>
    <relationshipName>Healthcare_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>