force-app/main/default/objects/Healthcare_Provider__c/fields/Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment__c</fullName>
    <label>Participant Enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipLabel>Healthcare Providers</relationshipLabel>
    <relationshipName>Healthcare_Providers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>