force-app/main/default/objects/Healthcare_Provider__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>No Sharing</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>